# clickflare

./: README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
cfcli/: __init__.py  cfclient.py  cli.py  config.py  helpers.py
cfcli/clis/: __init__.py  accounts.py  accounts_logs.py  accounts_logs_audit.py  accounts_members.py  accounts_roles.py  accounts_subscriptions.py  accounts_tokens.py  ips.py  zones.py  zones_dns_records.py
cfcli/opinionated_formats/: endpoint_formats.py
clickflare/: __init__.py
