[project]
name = "cfcli"
dynamic = ["version"]
authors = [
  { name="IotaSpencer", email="me@iotaspencer.me" },
]
maintainers = [
  { name="IotaSpencer", email="me@iotaspencer.me" },
]
keywords = ["cloudflare", "cli", "python"]
dependencies = [
  "click>=8.1.8",
  "cloudflare>=3.1.1",
]

description = "A command line interface for Cloudflare"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/IotaSpencer/cfclipy"
Issues = "https://github.com/IotaSpencer/cfclipy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/cfcli",
    "bin/cfcli",
]

[tool.hatch.version]
path = "cfcli/__init__.py"
pattern = "  VERSION = '(?P<version>[^']+)'"

[project.scripts]
cfcli = "cfcli:cli.cli"

